hume-editor/src/editor/tests/snapshots/hume_editor__editor__tests__picker__snapshot_picker_after_filtering_query.snap
---
source: hume-editor/src/editor/tests/picker.rs
expression: snap
---
<fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>1</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>┌──────────────────────────────┐</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│ap</><fg=#3c3836,bg=#bdae93> </><fg=#ebdbb2,bg=#282828>                        2/3│</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│</><fg=#b8bb26,bg=#3c3836>apple                         </><fg=#ebdbb2,bg=#282828>│</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│apricot                       │</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│                              │</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>└──────────────────────────────┘</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>     1:1 *scratch*                </><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
