hume-editor/src/editor/tests/snapshots/hume_editor__editor__tests__picker__snapshot_picker_with_prompt.snap
---
source: hume-editor/src/editor/tests/picker.rs
expression: snap
---
<fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>1</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>┌──────────────────────────────┐</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│files: a</><fg=#3c3836,bg=#bdae93> </><fg=#ebdbb2,bg=#282828>                  3/3│</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│</><fg=#b8bb26,bg=#3c3836>alpha                         </><fg=#ebdbb2,bg=#282828>│</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│beta                          │</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>│gamma                         │</>
<fg=#928374,bg=#282828>~</><fg=#665c54,bg=#282828>   </><fg=#ebdbb2,bg=#282828>└──────────────────────────────┘</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>     1:1 *scratch*                </><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
